1.0.5
 -Track analyses and analysis panel tab changes in Data Analytics
 -Fix uneven spacing in spaghetti plots (#614)

1.0.4 (April 8, 2021)
 -Merge Data Explorer and Summary Matrix (#568)
 -Add new Help Mode to Cohort Manager. (#577)
 -Add adjustable split panes to Cohort Manager. (#579)
 -Fix Analysis Tracker navigation bugs. (#584)
 -Make boxplots observe flip_axis attribute. (#586)
 -Return to step 2.3 after saving a cohort (#587)
 -Add dropdown to predefined-ranges tab in histogram chart (#588)
 -Fix bug clearing "All" checkboxes in input/output variable selection dialogs (#589)
 -Always show Cancel/Save buttons in AnalyticsPopup (#590)
 -Make all dialogs draggable (#591)
 -Eliminate delay when deleting cohorts (#593)
 -Fix component resize bug (#596)
 -Change default comparison measure to "Last Visit" in Data Analytics (#597)
 -Move visit timeline above chart on Set Visits page (#599)
 -Merge steps 2.3 and 2.4 in Cohort Manager (#598)
 -Rename Analyze Cohorts to Data Analytics (#598)
 -Cosmetic improvements to Detailed View graphs (#604,#605)
 -Rename 'Category' to 'Domain' (#609)
 -Add user_tracking table and logging code. (#567)
 -Rename "scale" to "variable" (#610)
 -Rename "outcome measure" to "analysis measure" (#611)
 -Add "best"/"worst" labels to detailed view in Data Analytics (#613)
 -Add explicit "All" label to select-all checkboxes (#551)
 -Add color legend to Data Analytics Detailed View (#223)

1.0.3 (February 24, 2021)
 -Add option to display full scale names (#562)
 -Limit histogram bins only if datatype is int (#558)
 -Change all decimal datatypes to decimal(15,5) (#559)
 -Improve label layout/spacing for certain datasets. (#560)
 -Display POD-Vis UI version number from package.json
 -Enable analytics for cross-sectional continuous variables (#566)
 -Redesign Cohort Manager with new panel that lists all cohorts (#569)
 -Add new dialog/wizard for creating predefined ranges (#570)
 -Remove 'Home Page' step from analysis tracker (#571)
