@@ -1,6 +1,6 @@
 {
   "name": "podvis",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
