@@ -1,6 +1,9 @@
 1.0.5
  -Track analyses and analysis panel tab changes in Data Analytics
  -Fix uneven spacing in spaghetti plots (#614)
+ -Set flip_axis = 0 for STAI (#620)
+ -Fix color legend label overlaps for short labels (#618)
+ -Update Data Analytics Cohort Stats to support observation variables as input vars (#616)
 
 1.0.4 (April 8, 2021)
  -Merge Data Explorer and Summary Matrix (#568)
